One solution for slideshow

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-            <div id="slideshow" class="inlineBlock vertAlignTop" style="margin-bottom: 25px;">
+            <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="margin-bottom: 25px;">
                 <div>
                     <img src="images/spd1.jpg"/>
                 </div>
@@ -52,6 +52,17 @@
                 </div>
                 -->
             </div>
+
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow2" class="slideshow inlineBlock vertAlignTop" style="margin-bottom: 25px;">
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+            <div>
+                <img src="images/spd1.jpg"/>
+            </div>
+
+        </div>
 
             <!-- Interested in Rushing? -->
             <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 0 30px;">
