--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
+    <!-- Boostrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 </head>
 
 <body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0">
@@ -29,13 +39,13 @@
 
     <!-- Content -->
     <div class="posRel" style="min-width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 500px;">
-            <!-- Welcome Letter -->
+            <!-- Welcome Letter
             <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 50px 30px;">
                 <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
                 <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
                 Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
                 success</strong> while enriching the college experience for engineering students.</p>
-            </div>
+            </div>-->
 
             <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
             <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="margin-bottom: 25px;">
@@ -53,18 +63,7 @@
                 -->
             </div>
 
-        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow2" class="slideshow inlineBlock vertAlignTop" style="margin-bottom: 25px;">
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-
-        </div>
-
-            <!-- Interested in Rushing? -->
+            <!-- Interested in Rushing?
             <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 0 30px;">
                 <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Interested in joining?</div>
                 <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
@@ -73,7 +72,7 @@
                 <a href="rush.html" style="text-decoration: none;">
                     <div id="rushBtn" class="vertAlignMid centerText" style="">SPRING RUSH 2016</div>
                 </a>
-            </div>
+            </div>-->
 
     </div>
 
