--- a/index.html
+++ b/index.html
@@ -33,51 +33,106 @@
 
 </head>
 
-<body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0">
-    <!-- Header -->
-    <div id="header"></div>
+<body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0; ">
+<!-- Header -->
+<div id="header"></div>
 
-    <!-- Content -->
-    <div class="posRel" style="min-width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 500px;">
-            <!-- Welcome Letter
-            <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 50px 30px;">
-                <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-                <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
-                Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
-                success</strong> while enriching the college experience for engineering students.</p>
-            </div>-->
+<!-- Content -->
+<div class="posRel" style="min-width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 448px;">
+    <!-- Welcome Letter
+    <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 50px 30px;">
+        <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
+        <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+        Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
+        success</strong> while enriching the college experience for engineering students.</p>
+    </div>-->
 
-            <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-            <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="margin-bottom: 25px;">
-                <div>
-                    <img src="images/spd1.jpg"/>
-                </div>
-                <div>
-                    <img src="images/spd2.jpg"/>
-                </div>
-
-                <!--
-                <div>
-                    Pretty cool eh? This slide is proof the content can be anything.
-                </div>
-                -->
+    <div class=" posRel" style="width: 3710px; text-align: left; left: -915px;padding-top: 5px;">
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="">
+            <div>
+                <img src="images/spd1.jpg"/>
             </div>
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+        </div>
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow2" class="slideshow inlineBlock vertAlignTop" style="">
+            <div>
+                <img src="images/spd1.jpg"/>
+            </div>
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+        </div>
 
-            <!-- Interested in Rushing?
-            <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 0 30px;">
-                <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Interested in joining?</div>
-                <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
-                Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow3" class="slideshow inlineBlock vertAlignTop" style="">
+            <div>
+                <img src="images/spd1.jpg"/>
+            </div>
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+        </div>
 
-                <a href="rush.html" style="text-decoration: none;">
-                    <div id="rushBtn" class="vertAlignMid centerText" style="">SPRING RUSH 2016</div>
-                </a>
-            </div>-->
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow4" class="slideshow inlineBlock vertAlignTop" style="">
+            <div>
+                <img src="images/spd1.jpg"/>
+            </div>
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+        </div>
 
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow5" class="slideshow inlineBlock vertAlignTop" style="">
+            <div>
+                <img src="images/spd1.jpg"/>
+            </div>
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+        </div>
+
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow6" class="slideshow inlineBlock vertAlignTop" style="">
+            <div>
+                <img src="images/spd1.jpg"/>
+            </div>
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+        </div>
+
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="">
+            <div>
+                <img src="images/spd1.jpg"/>
+            </div>
+            <div>
+                <img src="images/spd2.jpg"/>
+            </div>
+        </div>
     </div>
 
-    <!-- Footer -->
-    <div id="footer"></div>
+    <!-- Interested in Rushing?
+    <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 0 30px;">
+        <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Interested in joining?</div>
+        <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
+        Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
+
+        <a href="rush.html" style="text-decoration: none;">
+            <div id="rushBtn" class="vertAlignMid centerText" style="">SPRING RUSH 2016</div>
+        </a>
+    </div>-->
+
+</div>
+
+<!-- Footer -->
+<div id="footer"></div>
 
 <!--
 <div>
