Index page slideshow nearly complete. Adding text overlays and fixing the header

--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,7 @@
                         <!-- Link to SBU CEAS -->
                         <a href="http://www.stonybrook.edu/commcms/ceas/">
                             <div class="z2 inlineBlock posRel" style="height: 22px; width: 22px; vertical-align: middle; overflow: hidden; bottom: 2px;margin: 0 20px;">
-                                <img src="images/sbu1.png" height="22px" style="vertical-align: top; color: red;"/>
+                                <img src="images/symbols/sbu1.png" height="22px" style="vertical-align: top; color: red;"/>
                             </div>
                         </a>
                     </div>
