--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Sigma Phi Delta</title>
-    <link rel="shortcut icon" href="images/spdlogo.jpg">
+    <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
@@ -59,7 +59,7 @@
         <!-- SPD Logo -->
         <div class="centerText" style="margin:30px auto 50px auto;">
             <div class="insignia inlineBlock shadow backColWhite" style="width: 460px; padding: 15px 55px 25px 55px; height: 200px; border-radius: 50px;">
-                <img src="images/spdlogo.jpg" />
+                <img src="images/symbols/spdlogo.jpg" />
                 <div class="posRel" style="color: #637A6A; top: 35px;">Sigma Phi Delta Logo</div>
             </div>
         </div>
@@ -87,19 +87,19 @@
         <div class="centerText" style="margin: 35px auto 65px auto;">
             <!-- SPD Flower -->
             <div class="posRel shadow inlineBlock backColWhite floatLeft" style="width: 200px; height: 150px;  border-radius: 25px;">
-                <img src="images/spdflower.jpg" style="top: 15px;" class="posRel"/>
+                <img src="images/symbols/spdflower.jpg" style="top: 15px;" class="posRel"/>
                 <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Flower</span></div>
             </div>
 
             <!-- SPD Flag -->
             <div class="posRel inlineBlock" style="">
-                <img src="images/spdflag.gif" width="320px" style="" class="shadow"/>
+                <img src="images/symbols/spdflag.gif" width="320px" style="" class="shadow"/>
                 <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Flag</span></div>
             </div>
 
             <!-- SPD Symbol -->
             <div class="posRel shadow inlineBlock backColWhite floatRight centerText" style="width: 200px; height: 150px; border-radius: 25px;">
-                <img src="images/castle.jpg" width="100px" style="top: 10px;" class="posRel"/>
+                <img src="images/symbols/castle.jpg" width="100px" style="top: 10px;" class="posRel"/>
                 <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Symbol</span></div>
             </div>
         </div>
@@ -127,7 +127,7 @@
         <!-- SPD Crest -->
         <div class="centerText" style="margin:30px auto 50px auto;">
             <div class="insignia inlineBlock shadow backColWhite" style="width: 400px; padding: 15px 55px 25px 55px; height: 400px; border-radius: 50px;">
-                <img src="images/spdcoatofarms.jpg" height="100%" width="100%"/>
+                <img src="images/symbols/spdcoatofarms.jpg" height="100%" width="100%"/>
                 <div class="posRel" style="color: #637A6A; top: 35px;">Crest</div>
             </div>
         </div>
@@ -145,7 +145,7 @@
         <div class="centerText" style="margin: 75px auto 150px auto;">
             <!-- SPD Members Badge -->
             <div class="posRel shadow inlineBlock backColWhite floatLeft" style="width: 200px; height: 150px;  border-radius: 25px;">
-                <img src="images/spdmembbadge.jpg" style="top: 15px;" class="posRel"/>
+                <img src="images/symbols/spdmembbadge.jpg" style="top: 15px;" class="posRel"/>
                 <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Membership Badge</span></div>
             </div>
 
@@ -158,7 +158,7 @@
 
             <!-- SPD Pledge Pin -->
             <div class="posRel shadow inlineBlock backColWhite floatRight centerText" style="width: 200px; height: 150px; border-radius: 25px;">
-                <img src="images/spdpledgepin.jpg" width="150px" style="top: 10px;" class="posRel"/>
+                <img src="images/symbols/spdpledgepin.jpg" width="150px" style="top: 10px;" class="posRel"/>
                 <div class="posAbs centerText width100" style="color: #637A6A; bottom: -35px;"><span>Pledge Pin</span></div>
             </div>
         </div>
