--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Sigma Phi Delta</title>
-    <link rel="shortcut icon" href="images/spdlogo.jpg">
+    <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
@@ -52,26 +52,26 @@
 
         <!-- Event -->
         <div class="shadow grid-item">
-            <a href="fliers/fall2015/clothingdrive.jpg"><img class="small" src="fliers/fall2015/clothingdrive.jpg" width="100%" style=""></a>
-            <img class="enlarge" src="fliers/fall2015/clothingdrive.jpg" width="200%" style="">
+            <a href="images/fliers/fall2015/clothingdrive.jpg"><img class="small" src="images/fliers/fall2015/clothingdrive.jpg" width="100%" style=""></a>
+            <img class="enlarge" src="images/fliers/fall2015/clothingdrive.jpg" width="200%" style="">
         </div>
 
         <!-- Event -->
         <div class="shadow grid-item">
-            <a href="fliers/fall2015/sexharassment.jpg"><img class="small" src="fliers/fall2015/sexharassment.jpg" width="100%" style=""></a>
-            <img class="enlarge" src="fliers/fall2015/sexharassment.jpg" width="200%" style="">
+            <a href="images/fliers/fall2015/sexharassment.jpg"><img class="small" src="images/fliers/fall2015/sexharassment.jpg" width="100%" style=""></a>
+            <img class="enlarge" src="images/fliers/fall2015/sexharassment.jpg" width="200%" style="">
         </div>
 
         <!-- Event -->
         <div class="shadow grid-item">
-            <a href="fliers/fall2015/bubbletea.jpg"><img class="small" src="fliers/fall2015/bubbletea.jpg" width="100%" style=""></a>
-            <img class="enlarge" src="fliers/fall2015/bubbletea.jpg" width="200%" style="">
+            <a href="images/fliers/fall2015/bubbletea.jpg"><img class="small" src="images/fliers/fall2015/bubbletea.jpg" width="100%" style=""></a>
+            <img class="enlarge" src="images/fliers/fall2015/bubbletea.jpg" width="200%" style="">
         </div>
 
         <!-- Event -->
         <div class="shadow grid-item">
-            <a href="fliers/fall2015/resumereview.jpg"><img class="small" src="fliers/fall2015/resumereview.jpg" width="100%" style=""></a>
-            <img class="enlarge" src="fliers/fall2015/resumereview.jpg" width="200%" style="">
+            <a href="images/fliers/fall2015/resumereview.jpg"><img class="small" src="images/fliers/fall2015/resumereview.jpg" width="100%" style=""></a>
+            <img class="enlarge" src="images/fliers/fall2015/resumereview.jpg" width="200%" style="">
         </div>
 
 
