--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Sigma Phi Delta</title>
-    <link rel="shortcut icon" href="images/spdlogo.jpg">
+    <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
@@ -47,74 +47,91 @@
         success</strong> while enriching the college experience for engineering students.</p>
     </div>-->
 
-    <div class=" posRel" style="width: 3710px; text-align: left; left: -915px;padding-top: 5px;">
+    <div style="position: absolute; height: 460px; width: 605px; border: 10px solid #363636;z-index: 10; left: 670px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);
+-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);
+box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 20px;">
+
+    </div>
+
+    <div class=" posRel" style="width: 4000px; text-align: left; left: -915px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);height: 398px;margin: 90px auto 50px;">
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="">
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
         </div>
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow2" class="slideshow inlineBlock vertAlignTop" style="">
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow3" class="slideshow inlineBlock vertAlignTop" style="">
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
+        <div id="slideshow3" class="slideshow inlineBlock vertAlignTop" style="height: 450px;width: 530px;bottom: 20px;">
+            <div style="position: absolute; height: 50px; top: -50px; width: 530px;background-color: #E3E3E3;z-index:10;"></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="450px" width="600px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="450px" width="600px"/></div>
+            <div style="position: absolute; height: 50px; bottom: 0; width: 530px;background-color: #E3E3E3;z-index:10;"></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow4" class="slideshow inlineBlock vertAlignTop" style="">
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
+        <div id="slideshow4" class="slideshow inlineBlock vertAlignTop" style="margin-left:60px;">
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow5" class="slideshow inlineBlock vertAlignTop" style="">
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow6" class="slideshow inlineBlock vertAlignTop" style="">
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="">
-            <div>
-                <img src="images/spd1.jpg"/>
-            </div>
-            <div>
-                <img src="images/spd2.jpg"/>
-            </div>
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+
         </div>
     </div>
 
