--- a/members.html
+++ b/members.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Sigma Phi Delta</title>
-    <link rel="shortcut icon" href="images/spdlogo.jpg">
+    <link rel="shortcut icon" href="images/symbols/spdlogo.jpg">
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script language="javascript" type="text/javascript" src="js/index.js"></script>
