adding text overlays

--- a/header.html
+++ b/header.html
@@ -2,10 +2,10 @@
 <div class="posRel shadowBottom" style="padding: 0 0 25px 0; background-color: #191919;">
     <div style="width: 960px; margin: 0 auto;">
         <!-- SIGMA PHI DELTA -->
-        <div class="posRel" style="font-size: 100px; color: #F7302F; text-align: center; font-family: Adam; padding: 45px 0 10px 0; ">
-            <span style="padding: 5px;"><!--<span style="font-size: 101px;">&Sigma;</span>-->SIGMA</span>
-            <span style="padding: 5px;">PHI<!--<span style="font-size: 101px;">&Phi;</span>--></span>
-            <span style="padding: 5px;"><!--<span style="font-size: 101px;">&Delta;</span>-->DELTA</span>
+        <div class="posRel" style="font-size: 100px; color: #F7302F; text-align: center; font-family: Adam; padding: 0; top: 15px;">
+            <span style="padding: 0 5px;"><!--<span style="font-size: 101px;">&Sigma;</span>-->SIGMA</span>
+            <span style="padding: 0 5px;">PHI<!--<span style="font-size: 101px;">&Phi;</span>--></span>
+            <span style="padding: 0 5px;"><!--<span style="font-size: 101px;">&Delta;</span>-->DELTA</span>
         </div>
 
         <!-- Subtitle -->
