--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div id="header"></div>
 
 <!-- Content -->
-<div class="posRel" style="min-width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 448px;">
+<div class="posRel" style="min-width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 453px;">
     <!-- Welcome Letter
     <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 50px 30px;">
         <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
@@ -47,13 +47,9 @@
         success</strong> while enriching the college experience for engineering students.</p>
     </div>-->
 
-    <div style="position: absolute; height: 460px; width: 605px; border: 10px solid #363636;z-index: 10; left: 670px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);
--moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);
-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 20px;">
+    <div style="position: absolute; height: 460px; width: 605px; border: 10px solid #363636;z-index: 10; left: 630px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 25px;"></div>
 
-    </div>
-
-    <div class=" posRel" style="width: 4000px; text-align: left; left: -915px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    <div class=" posRel" style="width: 4000px; text-align: left; left: -955px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);height: 398px;margin: 90px auto 50px;">
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="">
@@ -77,8 +73,8 @@ box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 20px;">
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow3" class="slideshow inlineBlock vertAlignTop" style="height: 450px;width: 530px;bottom: 20px;">
-            <div style="position: absolute; height: 50px; top: -50px; width: 530px;background-color: #E3E3E3;z-index:10;"></div>
+        <div id="slideshow3" class="slideshow inlineBlock vertAlignTop" style="height: 450px;width: 530px;bottom: 25px;">
+            <div style="position: absolute; height: 50px; top: -25px; width: 530px;background-color: #E3E3E3;z-index:10;"></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="450px" width="600px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="450px" width="600px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="450px" width="600px"/></div>
