Home Page finished

--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
 <div class="posRel shadowBottom" style="padding: 0 0 25px 0; background-color: #191919;">
     <div style="width: 960px; margin: 0 auto;">
         <!-- SIGMA PHI DELTA -->
-        <div class="posRel" style="font-size: 100px; color: #F7302F; text-align: center; font-family: Adam; padding: 0; top: 15px;">
+        <div class="posRel" style="font-size: 100px; color: #F7302F; text-align: center; font-family: Adam; padding: 25px 0; top: 15px;">
             <span style="padding: 0 5px;"><!--<span style="font-size: 101px;">&Sigma;</span>-->SIGMA</span>
             <span style="padding: 0 5px;">PHI<!--<span style="font-size: 101px;">&Phi;</span>--></span>
             <span style="padding: 0 5px;"><!--<span style="font-size: 101px;">&Delta;</span>-->DELTA</span>
@@ -19,14 +19,14 @@
         </div>
 
         <!-- Navigation Bar -->
-        <div class="bordRed" style="height: 45px; width: 85%; margin: 20px auto; border-radius: 5px; border: 2px solid lightgrey; display: table;">
-            <a href="index.html" id="nvb-index" class="navbaritem textDecNone" data-transition="flow">HOME</a>
-            <a href="about.html" id="nvb-about" class="navbaritem" data-transition="flow">ABOUT</a>
-            <a href="rush.html" id="nvb-rush" class="navbaritem" data-transition="flow">RUSH</a>
-            <a href="events.html" id="nvb-events" class="navbaritem" data-transition="flow">EVENTS</a>
-            <a href="members.html" id="nvb-members" class="navbaritem" data-transition="flow">MEMBERS</a>
-            <a href="alumni.html" id="nvb-alumni" class="navbaritem" data-transition="flow">ALUMNI</a>
-            <a href="contact.html" id="nvb-contact" class="navbaritem" data-transition="flow">CONTACT</a>
+        <div class="bordRed colWhite" style="height: 45px; width: 85%; margin: 20px auto; border-radius: 5px; border: 2px solid lightgrey; display: table;">
+            <a href="index.html" id="nvb-index" class="navbaritem textDecNone colWhite" data-transition="flow">HOME</a>
+            <a href="about.html" id="nvb-about" class="navbaritem textDecNone colWhite" data-transition="flow">ABOUT</a>
+            <a href="rush.html" id="nvb-rush" class="navbaritem textDecNone colWhite" data-transition="flow">RUSH</a>
+            <a href="events.html" id="nvb-events" class="navbaritem textDecNone colWhite" data-transition="flow">EVENTS</a>
+            <a href="members.html" id="nvb-members" class="navbaritem textDecNone colWhite" data-transition="flow">MEMBERS</a>
+            <a href="alumni.html" id="nvb-alumni" class="navbaritem textDecNone colWhite" data-transition="flow">ALUMNI</a>
+            <a href="contact.html" id="nvb-contact" class="navbaritem textDecNone colWhite" data-transition="flow">CONTACT</a>
         </div>
     </div>
 </div>
