--- a/index.html
+++ b/index.html
@@ -21,15 +21,6 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
-    <!-- Boostrap -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 </head>
 
@@ -39,18 +30,22 @@
 
 <!-- Content -->
 <div class="posRel" style="min-width: 960px; margin: 65px auto 25px auto; text-align: center; min-height: 453px;">
-    <!-- Welcome Letter
-    <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 50px 30px;">
-        <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
-        <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
-        Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
-        success</strong> while enriching the college experience for engineering students.</p>
-    </div>-->
+    <div style="position: absolute; height: 440px; width: 590px; border: 10px solid #363636;z-index: 10; left: 630px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 25px;"></div>
 
-    <div style="position: absolute; height: 460px; width: 605px; border: 10px solid #363636;z-index: 10; left: 630px;-webkit-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);-moz-box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);box-shadow: 0px 0px 15px 0px rgba(38,38,38,1);bottom: 25px;"></div>
-
-    <div class=" posRel" style="width: 4000px; text-align: left; left: -955px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    <div class=" posRel" style="width: 4000px; text-align: left; left: -1485px;box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);-moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);height: 398px;margin: 90px auto 50px;">
+        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
+        <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="">
+            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
+            <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
+        </div>
+
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow1" class="slideshow inlineBlock vertAlignTop" style="">
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
@@ -60,9 +55,11 @@
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
+            <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
         </div>
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow2" class="slideshow inlineBlock vertAlignTop" style="">
+
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
@@ -70,6 +67,14 @@
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
+            <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
+            <!-- Welcome Letter-->
+            <div class="inlineBlock opensans centerDiv vertAlignTop centerText posAbs" style="left: 540px; font-size: 20px; height: 400px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
+                <div class="" style=" font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Welcome to Sigma Phi Delta!</div>
+                <p>We are a <strong>professional</strong> and <strong>social</strong> engineering fraternity made up of the most excellent male engineers at
+                    Stony Brook University. Our fraternity is dedicated to guiding its members towards professional and <strong>academic
+                        success</strong> while enriching the college experience for engineering students.</p>
+            </div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
@@ -87,6 +92,7 @@
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
         <div id="slideshow4" class="slideshow inlineBlock vertAlignTop" style="margin-left:60px;">
+
             <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
@@ -94,6 +100,17 @@
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
+            <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
+            <!-- Interested in Rushing?-->
+            <div class="opensans centerDiv vertAlignTop centerText posAbs" style="left: 550px; font-size: 20px; height: 400px; width: 500px; color: white;padding: 0 8px 0 8px;z-index: 11;">
+                <div class="" style="color: white; font-family: Amaranth; font-size: 36px; margin: 25px 0 25px 0;">Interested in joining?</div>
+                <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
+                    Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
+
+                <a href="rush.html" style="text-decoration: none;">
+                    <div id="rushBtn" class="vertAlignTop centerText" style="">SPRING RUSH 2016</div>
+                </a>
+            </div>
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
@@ -105,6 +122,8 @@
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
+            <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
+
         </div>
 
         <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
@@ -116,31 +135,13 @@
             <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
             <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
-        </div>
+            <div class="posAbs" style="height: 400px; width: 530px; background-color: #464646; opacity: 0.75; z-index: 10; top: 0;left: 530px;"></div>
 
-        <!-- Slideshow - Preferred Aspect Ratio is 4:3 for images -->
-        <div id="slideshow7" class="slideshow inlineBlock vertAlignTop" style="">
-            <div class="imgCont"><img src="images/pictures/ss-spd2.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd3.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd4.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd5.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd6.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd7.jpg" height="400px" width="530px"/></div>
-            <div class="imgCont"><img src="images/pictures/ss-spd1.jpg" height="400px" width="530px"/></div>
 
         </div>
+
+
     </div>
-
-    <!-- Interested in Rushing?
-    <div class="inlineBlock opensans centerDiv vertAlignTop centerText" style="font-size: 20px; min-width: 480px; width: 30%; color: black;padding: 0 30px 0 30px;">
-        <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 20px 0 25px 0;">Interested in joining?</div>
-        <p>The academic, professional, and networking opportunities are boundless as a member of Sigma Phi Delta.
-        Learn in detail about these opportunities and how to join Sigma Phi Delta at our RUSH page.</p>
-
-        <a href="rush.html" style="text-decoration: none;">
-            <div id="rushBtn" class="vertAlignMid centerText" style="">SPRING RUSH 2016</div>
-        </a>
-    </div>-->
 
 </div>
 
