--- a/members.html
+++ b/members.html
@@ -21,6 +21,58 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
+
+    <script type="text/javascript">
+        var spData = null;
+        function doData(json) {
+            spData = json.feed.entry;
+        }
+
+        function drawCell(tr, val) {
+            var td = $("<td/>");
+            tr.append(td);
+            td.append(val);
+            return td;
+        }
+        function drawRow(table, rowData) {
+            if (rowData == null) return null;
+            if (rowData.length == 0) return null;
+            var tr = $("<tr/>");
+            table.append(tr);
+            for(var c=0; c<rowData.length; c++) {
+                drawCell(tr, rowData[c]);
+            }
+            return tr;
+        }
+
+        function drawTable(parent) {
+            var table = $("<table/>");
+            parent.append(table);
+            return table;
+        }
+
+        function readData(parent) {
+            var data = spData;
+            var table = drawTable(parent);
+            var rowData = [];
+
+            for(var r=0; r<data.length; r++) {
+                var cell = data[r]["gs$cell"];
+                var val = cell["$t"];
+                if (cell.col == 1) {
+                    drawRow(table, rowData);
+                    rowData = [];
+                }
+                rowData.push(val);
+            }
+            drawRow(table, rowData);
+        }
+        $(document).ready(function(){
+            readData($("#data"));
+        });
+    </script>
+    <script src="https://spreadsheets.google.com/feeds/cells/1RFRQGJ4HN8BnmPHhUvwKjPvYCOswd4N7wkpJTQfhzzg/1/public/values?alt=json-in-script&callback=doData"></script>
+
 </head>
 
 <body id="pageone" class="posRel" style="width: 100%; height: 100%; overflow-x: hidden; background-color: #E3E3E3; margin:0; padding:0">
@@ -28,9 +80,13 @@
 <div id="header"></div>
 
 <!-- Content -->
+
+
 <div class="posRel" style="min-width: 960px; margin: 35px auto 25px auto; text-align: center; min-height: 530px;">
+
+    <div id="data"></div>
+
     <!-- Active Members-->
-    <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 36px; margin: 0 0 25px 0;">Active Members</div>
     <div>
         <!-- Member 1 -->
         <div class="inlineBlock backColWhite bordRad5 shadow" style="width: 250px;">
@@ -62,6 +118,8 @@
             </div>
         </div>
     </div>
+
+
 
 
 </div>
