Styling working for members. Starting to add special styling

--- a/events.html
+++ b/events.html
@@ -51,25 +51,25 @@
         </div>-->
 
         <!-- Event -->
-        <div class="shadow grid-item">
+        <div class="shadow grid-item event">
             <a href="images/fliers/fall2015/clothingdrive.jpg"><img class="small" src="images/fliers/fall2015/clothingdrive.jpg" width="100%" style=""></a>
             <img class="enlarge" src="images/fliers/fall2015/clothingdrive.jpg" width="200%" style="">
         </div>
 
         <!-- Event -->
-        <div class="shadow grid-item">
+        <div class="shadow grid-item event">
             <a href="images/fliers/fall2015/sexharassment.jpg"><img class="small" src="images/fliers/fall2015/sexharassment.jpg" width="100%" style=""></a>
             <img class="enlarge" src="images/fliers/fall2015/sexharassment.jpg" width="200%" style="">
         </div>
 
         <!-- Event -->
-        <div class="shadow grid-item">
+        <div class="shadow grid-item event">
             <a href="images/fliers/fall2015/bubbletea.jpg"><img class="small" src="images/fliers/fall2015/bubbletea.jpg" width="100%" style=""></a>
             <img class="enlarge" src="images/fliers/fall2015/bubbletea.jpg" width="200%" style="">
         </div>
 
         <!-- Event -->
-        <div class="shadow grid-item">
+        <div class="shadow grid-item event">
             <a href="images/fliers/fall2015/resumereview.jpg"><img class="small" src="images/fliers/fall2015/resumereview.jpg" width="100%" style=""></a>
             <img class="enlarge" src="images/fliers/fall2015/resumereview.jpg" width="200%" style="">
         </div>
