--- a/rush.html
+++ b/rush.html
@@ -35,34 +35,7 @@
 
     <!-- List of Rush Events -->
     <div class="shadow inlineBlock floatRight vertAlignTop" style="margin-top: 20px; width: 55%; min-height: 250px; margin-left: 25px; text-align: left; padding: 10px; border: 5px solid #191919;">
-        <!-- Title -->
-        <div class=" centerText" style="color: #F7302F; font-family: Amaranth; font-size: 28px; padding-bottom: 5px; border-bottom: 2px solid gray;">Spring Rush 2016 Events</div>
-
-        <!-- Event1 -->
-        <a href="#" class="block textDecNone event" style=" padding: 8px; margin: 10px; border-radius: 5px;">
-            <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Resume Review Workshop with Career Center</div>
-            <div class="opensans" style="font-size: 18px; color: black;">
-                <span style="">January 15th @ 7pm</span>
-                <span style="margin: auto 25px;">&middot;</span>
-                <span style="">SAC Ballroom B</span>
-            </div>
-            <div class="opensans" style="font-size: 20px; color: black; margin-top: 5px;">
-                Description of the event
-            </div>
-        </a>
-
-        <!-- Event2 -->
-        <a href="#" class="block textDecNone event" style=" padding: 8px; margin: 10px; border-radius: 5px;">
-            <div class="" style="color: #F7302F; font-family: Amaranth; font-size: 26px;">Information Sessions</div>
-            <div class="opensans" style="font-size: 18px; color: black;">
-                <span style="">January 22nd @ 7pm</span>
-                <span style="margin: auto 25px;">&middot;</span>
-                <span style="">Cardozo Lounge</span>
-            </div>
-            <div class="opensans" style="font-size: 20px; color: black; margin-top: 5px;">
-                Description of the event
-            </div>
-        </a>
+        <!-- Rush Flier -->
 
     </div>
 
