--- a/members.html
+++ b/members.html
@@ -21,6 +21,8 @@
     <!-- Color Animations -->
     <script src="js/jquery.color.js"></script>
 
+    <!-- Masonry -->
+    <script src="js/masonry.pkgd.min.js"></script>
 
     <script type="text/javascript">
         var spData = null;
@@ -28,21 +30,67 @@
             spData = json.feed.entry;
         }
 
-        function drawCell(tr, val) {
+        function drawCell(container, val, c) {
+
+            /*
             var td = $("<div>");
-            tr.append(td);
+            container.append(td);
             td.append(val);
             var tv = $("</div>");
-            tr.append(tv);
+            container.append(tv);
             return td;
+             */
+            var input;
+            var start = $("<div>");
+            var end = $("</div>");
+
+            switch(c){
+                case 0:
+                    input = $('<div style="font-family: Lato, sans-serif;" class="fontSize24">' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 1:
+                    input = $('<div class="opensans" style="">Major: ' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 2:
+                    input = $('<div class="opensans" style="">Pledge Class: ' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 3:
+                    input = $('<div class="opensans" style="">Hometown: ' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 4:
+                    input = $('<div class="opensans" style="">Position: ' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 5:
+                    input = $('<div class="opensans" style="">Graduation Date: ' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 6:
+                    input = $('<div class="opensans" style="">Description: ' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 7:
+                    input = $('<div class="opensans" style="">Membership: ' + val + '</div>');
+                    container.append(input);
+                    break;
+                case 8:
+                    input = $('<div class="opensans" style="">Picture: ' + val + '</div>');
+                    container.append(input);
+                    break;
+            }
+
         }
         function drawRow(parent, rowData) {
             if (rowData == null) return null;
             if (rowData.length == 0) return null;
-            var tr = $("<div class='inlineBlock backColWhite bordRad5 shadow centerText' style='width: 250px;'>");
+            var tr = $("<div class='inlineBlock backColWhite bordRad5 shadow grid-item' style='width: 250px;padding: 8px; margin: 20px;'>");
             parent.append(tr);
             for(var c=0; c<rowData.length; c++) {
-                drawCell(tr, rowData[c]);
+                drawCell(tr, rowData[c], c);
             }
             var vr = $("</div>");
             parent.append(vr);
@@ -72,6 +120,7 @@
         }
         $(document).ready(function(){
             readData($("#data"));
+            $('.grid-item').first().css('display', 'none');
         });
     </script>
     <script src="https://spreadsheets.google.com/feeds/cells/1RFRQGJ4HN8BnmPHhUvwKjPvYCOswd4N7wkpJTQfhzzg/1/public/values?alt=json-in-script&callback=doData"></script>
@@ -85,9 +134,10 @@
 <!-- Content -->
 
 
-<div class="posRel" style="min-width: 960px; margin: 35px auto 25px auto; text-align: center; min-height: 530px;">
+<div class="posRel" style="width: 55%; margin: 35px auto 25px auto; text-align: center; min-height: 530px; min-width: 960px;">
 
-    <div id="data"></div>
+    <!-- I don't know why this needs a padding left -> Added bordRed, evens out the DIV -->
+    <div id="data" class="centerText centerDiv" style="padding-left: 50px;"></div>
 
     <!-- Active Members
     <div>
@@ -150,5 +200,17 @@ is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Crea
         $('#header').load("header.html");
         $('#footer').load("footer.html");
     });
+</script>
+
+<script>
+    $(window).on('load', function(){
+
+        $('#data').masonry({
+            columnWidth: 1,
+            itemSelector: '.grid-item'
+
+        });
+    });
+
 </script>
 
