--- a/members.html
+++ b/members.html
@@ -78,7 +78,13 @@
                     container.append(input);
                     break;
                 case 8:
-                    input = $('<div class="opensans" style="">Picture: ' + val + '</div>');
+                        if (val != 'FALSE'){
+                            input = $('<div style="max-height: 300px; overflow: hidden;"><img src="' + val +  '" width="100%" /></div>');
+
+                        }
+                        else{
+                            input = $('<div class="opensans" style="">Picture: ' + val + '</div>');
+                        }
                     container.append(input);
                     break;
             }
@@ -87,11 +93,20 @@
         function drawRow(parent, rowData) {
             if (rowData == null) return null;
             if (rowData.length == 0) return null;
-            var tr = $("<div class='inlineBlock backColWhite bordRad5 shadow grid-item' style='width: 250px;padding: 8px; margin: 20px;'>");
+            var tr = $("<div class='inlineBlock backColWhite bordRad5 shadow grid-item opensans' style='width: 250px;margin: 20px;'>");
             parent.append(tr);
+
+
             for(var c=0; c<rowData.length; c++) {
                 drawCell(tr, rowData[c], c);
             }
+
+            //var divHeader = $(
+            //        '<div class="fontSize24" style="font-family: Lato">' + rowData[0] + '</div>' +
+            //        '<div class="fontSize14">'+rowData +'</div>' +
+            //        '');
+
+
             var vr = $("</div>");
             parent.append(vr);
         }
